--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ p {
   justify-content: center;
   align-items: center;
   color: transparent;
-  background: url(https://media0.giphy.com/media/0HR6cjY8Q1XQlmjVVa/giphy360p.mp4) center/cover;
+  background: url(https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZjA1OGExYjJjYWY0MDQ3NDNmYWEzMmZmMmY4Yzc5MWY5ZGI5OGIxNCZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/B45tHHX4tOVO/giphy.gif) center/cover;
   -webkit-background-clip: text;
   background-clip: text;
   word-spacing: 0px;
